aggregated features and saved in csv

--- a/src/notebooks/preprocessing.ipynb
+++ b/src/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "9  ../../dataset/AudioWAV/1075_ITH_SAD_XX.wav  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -413,6 +413,374 @@
     "\n",
     "features = extract_acoustic_features(y, sr)\n",
     "visualize_features(features, sr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def aggregate_features(features):\n",
+    "    aggregated = {}\n",
+    "    \n",
+    "    aggregated['mfcc_mean'] = np.mean(features['mfcc'], axis=1).tolist()\n",
+    "    aggregated['mfcc_delta_mean'] = np.mean(features['mfcc_delta'], axis=1).tolist()\n",
+    "    aggregated['mfcc_delta2_mean'] = np.mean(features['mfcc_delta2'], axis=1).tolist()\n",
+    "\n",
+    "    aggregated['mel_spec_db_mean'] = np.mean(features['mel_spec_db'], axis=1).tolist()\n",
+    "\n",
+    "    aggregated['spectral_centroid_mean'] = np.mean(features['spectral_centroid'])\n",
+    "\n",
+    "    aggregated['zcr_mean'] = np.mean(features['zcr'])\n",
+    "    \n",
+    "    return aggregated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mfcc_mean = []\n",
+    "mfcc_delta_mean = []\n",
+    "mfcc_delta2_mean = []\n",
+    "mel_spec_db_mean = []\n",
+    "spectral_centroid_mean = []\n",
+    "zcr_mean = []\n",
+    "\n",
+    "for index, row in df.iterrows():\n",
+    "    y, sr = librosa.load(row['Location'])\n",
+    "    features = extract_acoustic_features(y, sr)\n",
+    "    aggregated_features = aggregate_features(features)\n",
+    "    mfcc_mean.append(aggregated_features['mfcc_mean'])\n",
+    "    mfcc_delta_mean.append(aggregated_features['mfcc_delta_mean'])\n",
+    "    mfcc_delta2_mean.append(aggregated_features['mfcc_delta2_mean'])\n",
+    "    mel_spec_db_mean.append(aggregated_features['mel_spec_db_mean'])\n",
+    "    spectral_centroid_mean.append(aggregated_features['spectral_centroid_mean'])\n",
+    "    zcr_mean.append(aggregated_features['zcr_mean'])\n",
+    "\n",
+    "df['mfcc_mean'] = mfcc_mean\n",
+    "df['mfcc_delta_mean'] = mfcc_delta_mean\n",
+    "df['mfcc_delta2_mean'] = mfcc_delta2_mean\n",
+    "df['mel_spec_db_mean'] = mel_spec_db_mean\n",
+    "df['spectral_centroid_mean'] = spectral_centroid_mean\n",
+    "df['zcr_mean'] = zcr_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Emotion</th>\n",
+       "      <th>Emotion levels</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>mfcc_mean</th>\n",
+       "      <th>mfcc_delta_mean</th>\n",
+       "      <th>mfcc_delta2_mean</th>\n",
+       "      <th>mel_spec_db_mean</th>\n",
+       "      <th>spectral_centroid_mean</th>\n",
+       "      <th>zcr_mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>42</td>\n",
+       "      <td>ANG</td>\n",
+       "      <td>XX</td>\n",
+       "      <td>../../dataset/AudioWAV/1041_IOM_ANG_XX.wav</td>\n",
+       "      <td>[-326.2571716308594, 131.7582550048828, 6.1154...</td>\n",
+       "      <td>[0.1255483478307724, 0.0030219131149351597, -0...</td>\n",
+       "      <td>[-0.06625314801931381, -0.06355936825275421, -...</td>\n",
+       "      <td>[-40.790618896484375, -42.56074523925781, -41....</td>\n",
+       "      <td>1179.349322</td>\n",
+       "      <td>0.043249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>29</td>\n",
+       "      <td>HAP</td>\n",
+       "      <td>XX</td>\n",
+       "      <td>../../dataset/AudioWAV/1005_ITH_HAP_XX.wav</td>\n",
+       "      <td>[-358.2459411621094, 127.40997314453125, -14.4...</td>\n",
+       "      <td>[0.1006937250494957, -0.023168224841356277, -0...</td>\n",
+       "      <td>[-0.014264722354710102, 0.020047934725880623, ...</td>\n",
+       "      <td>[-51.56120300292969, -45.58784866333008, -39.5...</td>\n",
+       "      <td>1500.493431</td>\n",
+       "      <td>0.070299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>52</td>\n",
+       "      <td>ANG</td>\n",
+       "      <td>MD</td>\n",
+       "      <td>../../dataset/AudioWAV/1056_IEO_ANG_MD.wav</td>\n",
+       "      <td>[-273.2405090332031, 88.28800201416016, -3.525...</td>\n",
+       "      <td>[-0.021853862330317497, -0.05562637746334076, ...</td>\n",
+       "      <td>[-0.07706470787525177, -0.09429140388965607, -...</td>\n",
+       "      <td>[-52.3060188293457, -54.23222732543945, -52.04...</td>\n",
+       "      <td>1761.658971</td>\n",
+       "      <td>0.085656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>62</td>\n",
+       "      <td>HAP</td>\n",
+       "      <td>LO</td>\n",
+       "      <td>../../dataset/AudioWAV/1087_IEO_HAP_LO.wav</td>\n",
+       "      <td>[-479.1881103515625, 135.39967346191406, 26.78...</td>\n",
+       "      <td>[0.026304759085178375, -0.005736589431762695, ...</td>\n",
+       "      <td>[-0.10344648361206055, -0.022910796105861664, ...</td>\n",
+       "      <td>[-37.45167541503906, -26.1318359375, -22.67318...</td>\n",
+       "      <td>1117.330547</td>\n",
+       "      <td>0.036856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>33</td>\n",
+       "      <td>ANG</td>\n",
+       "      <td>XX</td>\n",
+       "      <td>../../dataset/AudioWAV/1052_MTI_ANG_XX.wav</td>\n",
+       "      <td>[-252.0337371826172, 109.15762329101562, -4.00...</td>\n",
+       "      <td>[0.05976373329758644, 0.057750023901462555, 0....</td>\n",
+       "      <td>[-0.034133877605199814, -0.031858768314123154,...</td>\n",
+       "      <td>[-47.52482223510742, -52.19740676879883, -50.6...</td>\n",
+       "      <td>1439.093152</td>\n",
+       "      <td>0.064631</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7437</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>20</td>\n",
+       "      <td>FEA</td>\n",
+       "      <td>XX</td>\n",
+       "      <td>../../dataset/AudioWAV/1082_TAI_FEA_XX.wav</td>\n",
+       "      <td>[-376.8907165527344, 115.07537841796875, 6.563...</td>\n",
+       "      <td>[0.0718960389494896, 0.059239327907562256, 0.0...</td>\n",
+       "      <td>[-0.2090027928352356, -0.044961683452129364, 0...</td>\n",
+       "      <td>[-45.30091094970703, -33.967140197753906, -32....</td>\n",
+       "      <td>1733.797389</td>\n",
+       "      <td>0.094620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7438</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>NEU</td>\n",
+       "      <td>XX</td>\n",
+       "      <td>../../dataset/AudioWAV/1002_MTI_NEU_XX.wav</td>\n",
+       "      <td>[-441.2577209472656, 137.40689086914062, 1.919...</td>\n",
+       "      <td>[0.007813234813511372, 0.0019433539127930999, ...</td>\n",
+       "      <td>[-0.1413743793964386, -0.029882824048399925, 0...</td>\n",
+       "      <td>[-42.70682907104492, -38.069862365722656, -32....</td>\n",
+       "      <td>1312.391145</td>\n",
+       "      <td>0.051037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7439</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>45</td>\n",
+       "      <td>ANG</td>\n",
+       "      <td>LO</td>\n",
+       "      <td>../../dataset/AudioWAV/1083_IEO_ANG_LO.wav</td>\n",
+       "      <td>[-338.41162109375, 114.89805603027344, -4.6734...</td>\n",
+       "      <td>[0.934953510761261, -0.3876592814922333, -0.42...</td>\n",
+       "      <td>[0.7294207811355591, -0.19926434755325317, -0....</td>\n",
+       "      <td>[-46.6953010559082, -36.81074523925781, -31.55...</td>\n",
+       "      <td>1825.146631</td>\n",
+       "      <td>0.092624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7440</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>32</td>\n",
+       "      <td>NEU</td>\n",
+       "      <td>XX</td>\n",
+       "      <td>../../dataset/AudioWAV/1011_IOM_NEU_XX.wav</td>\n",
+       "      <td>[-421.2152404785156, 140.95579528808594, 10.92...</td>\n",
+       "      <td>[0.11217541992664337, 0.05309046432375908, -0....</td>\n",
+       "      <td>[0.01666495017707348, 0.003503540065139532, -0...</td>\n",
+       "      <td>[-27.388154983520508, -29.533885955810547, -27...</td>\n",
+       "      <td>1140.460215</td>\n",
+       "      <td>0.037141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7441</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>22</td>\n",
+       "      <td>DIS</td>\n",
+       "      <td>XX</td>\n",
+       "      <td>../../dataset/AudioWAV/1045_ITH_DIS_XX.wav</td>\n",
+       "      <td>[-449.5667724609375, 149.0689239501953, 6.7965...</td>\n",
+       "      <td>[0.09113539755344391, 0.05736362189054489, -0....</td>\n",
+       "      <td>[-0.0681711956858635, -0.05158385634422302, -0...</td>\n",
+       "      <td>[-19.81647491455078, -23.574453353881836, -22....</td>\n",
+       "      <td>1215.057451</td>\n",
+       "      <td>0.043496</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7442 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Gender  Age Emotion Emotion levels  \\\n",
+       "0       Male   42     ANG             XX   \n",
+       "1       Male   29     HAP             XX   \n",
+       "2     Female   52     ANG             MD   \n",
+       "3       Male   62     HAP             LO   \n",
+       "4     Female   33     ANG             XX   \n",
+       "...      ...  ...     ...            ...   \n",
+       "7437  Female   20     FEA             XX   \n",
+       "7438  Female   21     NEU             XX   \n",
+       "7439    Male   45     ANG             LO   \n",
+       "7440    Male   32     NEU             XX   \n",
+       "7441    Male   22     DIS             XX   \n",
+       "\n",
+       "                                        Location  \\\n",
+       "0     ../../dataset/AudioWAV/1041_IOM_ANG_XX.wav   \n",
+       "1     ../../dataset/AudioWAV/1005_ITH_HAP_XX.wav   \n",
+       "2     ../../dataset/AudioWAV/1056_IEO_ANG_MD.wav   \n",
+       "3     ../../dataset/AudioWAV/1087_IEO_HAP_LO.wav   \n",
+       "4     ../../dataset/AudioWAV/1052_MTI_ANG_XX.wav   \n",
+       "...                                          ...   \n",
+       "7437  ../../dataset/AudioWAV/1082_TAI_FEA_XX.wav   \n",
+       "7438  ../../dataset/AudioWAV/1002_MTI_NEU_XX.wav   \n",
+       "7439  ../../dataset/AudioWAV/1083_IEO_ANG_LO.wav   \n",
+       "7440  ../../dataset/AudioWAV/1011_IOM_NEU_XX.wav   \n",
+       "7441  ../../dataset/AudioWAV/1045_ITH_DIS_XX.wav   \n",
+       "\n",
+       "                                              mfcc_mean  \\\n",
+       "0     [-326.2571716308594, 131.7582550048828, 6.1154...   \n",
+       "1     [-358.2459411621094, 127.40997314453125, -14.4...   \n",
+       "2     [-273.2405090332031, 88.28800201416016, -3.525...   \n",
+       "3     [-479.1881103515625, 135.39967346191406, 26.78...   \n",
+       "4     [-252.0337371826172, 109.15762329101562, -4.00...   \n",
+       "...                                                 ...   \n",
+       "7437  [-376.8907165527344, 115.07537841796875, 6.563...   \n",
+       "7438  [-441.2577209472656, 137.40689086914062, 1.919...   \n",
+       "7439  [-338.41162109375, 114.89805603027344, -4.6734...   \n",
+       "7440  [-421.2152404785156, 140.95579528808594, 10.92...   \n",
+       "7441  [-449.5667724609375, 149.0689239501953, 6.7965...   \n",
+       "\n",
+       "                                        mfcc_delta_mean  \\\n",
+       "0     [0.1255483478307724, 0.0030219131149351597, -0...   \n",
+       "1     [0.1006937250494957, -0.023168224841356277, -0...   \n",
+       "2     [-0.021853862330317497, -0.05562637746334076, ...   \n",
+       "3     [0.026304759085178375, -0.005736589431762695, ...   \n",
+       "4     [0.05976373329758644, 0.057750023901462555, 0....   \n",
+       "...                                                 ...   \n",
+       "7437  [0.0718960389494896, 0.059239327907562256, 0.0...   \n",
+       "7438  [0.007813234813511372, 0.0019433539127930999, ...   \n",
+       "7439  [0.934953510761261, -0.3876592814922333, -0.42...   \n",
+       "7440  [0.11217541992664337, 0.05309046432375908, -0....   \n",
+       "7441  [0.09113539755344391, 0.05736362189054489, -0....   \n",
+       "\n",
+       "                                       mfcc_delta2_mean  \\\n",
+       "0     [-0.06625314801931381, -0.06355936825275421, -...   \n",
+       "1     [-0.014264722354710102, 0.020047934725880623, ...   \n",
+       "2     [-0.07706470787525177, -0.09429140388965607, -...   \n",
+       "3     [-0.10344648361206055, -0.022910796105861664, ...   \n",
+       "4     [-0.034133877605199814, -0.031858768314123154,...   \n",
+       "...                                                 ...   \n",
+       "7437  [-0.2090027928352356, -0.044961683452129364, 0...   \n",
+       "7438  [-0.1413743793964386, -0.029882824048399925, 0...   \n",
+       "7439  [0.7294207811355591, -0.19926434755325317, -0....   \n",
+       "7440  [0.01666495017707348, 0.003503540065139532, -0...   \n",
+       "7441  [-0.0681711956858635, -0.05158385634422302, -0...   \n",
+       "\n",
+       "                                       mel_spec_db_mean  \\\n",
+       "0     [-40.790618896484375, -42.56074523925781, -41....   \n",
+       "1     [-51.56120300292969, -45.58784866333008, -39.5...   \n",
+       "2     [-52.3060188293457, -54.23222732543945, -52.04...   \n",
+       "3     [-37.45167541503906, -26.1318359375, -22.67318...   \n",
+       "4     [-47.52482223510742, -52.19740676879883, -50.6...   \n",
+       "...                                                 ...   \n",
+       "7437  [-45.30091094970703, -33.967140197753906, -32....   \n",
+       "7438  [-42.70682907104492, -38.069862365722656, -32....   \n",
+       "7439  [-46.6953010559082, -36.81074523925781, -31.55...   \n",
+       "7440  [-27.388154983520508, -29.533885955810547, -27...   \n",
+       "7441  [-19.81647491455078, -23.574453353881836, -22....   \n",
+       "\n",
+       "      spectral_centroid_mean  zcr_mean  \n",
+       "0                1179.349322  0.043249  \n",
+       "1                1500.493431  0.070299  \n",
+       "2                1761.658971  0.085656  \n",
+       "3                1117.330547  0.036856  \n",
+       "4                1439.093152  0.064631  \n",
+       "...                      ...       ...  \n",
+       "7437             1733.797389  0.094620  \n",
+       "7438             1312.391145  0.051037  \n",
+       "7439             1825.146631  0.092624  \n",
+       "7440             1140.460215  0.037141  \n",
+       "7441             1215.057451  0.043496  \n",
+       "\n",
+       "[7442 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = '../../dataset/'\n",
+    "path = os.path.join(path, 'features.csv')\n",
+    "df.to_csv(path, index=False)"
    ]
   }
  ],
